# adk-rust

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  devenv.nix  lefthook.yml  publish.sh
.github/workflows/: semver.yml
adk-acp/: Cargo.toml
adk-agent/: Cargo.toml
adk-agent/src/: compaction.rs  lib.rs  llm_agent.rs
adk-agent/src/ambient/: agent.rs  mod.rs
adk-agent/src/coding/: mod.rs  todo.rs
adk-agent/src/workflow/: loop_agent.rs
adk-agent/tests/: agent_callback_tests.rs  callback_integration_test.rs  coding_tests.rs  mcp_integration_test.rs  multi_agent_test.rs  streaming_test.rs  tool_callback_tests.rs  tool_confirmation_tests.rs
adk-auth/: Cargo.toml
adk-auth/src/: audit_otlp.rs  audit_postgres.rs  lib.rs
adk-bench/harnesses/: bench_langgraph.py
adk-bench/src/: memory.rs  runner.rs
adk-cli/src/: cli.rs  main.rs  ultra.rs
adk-codeact-monty/: Cargo.toml  README.md
adk-codeact-monty/src/: lib.rs  runtime.rs
adk-core/src/: context.rs
adk-devtools/: Cargo.toml  README.md
adk-devtools/src/: error.rs  lib.rs  toolset.rs  workspace.rs
adk-devtools/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
adk-devtools/tests/: devtools.rs
adk-devtools/tests/common/: mod.rs
adk-gemini/examples/: simple_thought_signature.rs  text_thought_signature_example.rs
adk-gemini/src/: client.rs  pricing.rs
adk-graph/: Cargo.toml  README.md
adk-graph/src/: agent.rs  error.rs  executor.rs  graph.rs  node.rs  time_travel.rs
adk-graph/src/functional/: error.rs  mod.rs
adk-graph/tests/: state_graph_fan_in.rs
adk-managed/src/: default_runtime.rs  session_loop.rs
adk-managed/src/types/: events.rs
adk-memory/src/: graph.rs
adk-mistralrs/: README.md
adk-model/: Cargo.toml
adk-model/examples/: gemini_thinking.rs
adk-model/examples/openrouter/: chat_support.rs  llm_support.rs  responses_support.rs
adk-model/src/: attachment.rs  openai_compatible.rs
adk-model/src/openai/: client.rs
adk-model/tests/: openai_schema_property_tests.rs
adk-plugin/: README.md
adk-realtime/examples/: debug_livekit_auth.rs
adk-retry-reflect/: Cargo.toml  README.md
adk-retry-reflect/src/: backoff.rs  builder.rs  config.rs  detection.rs  error.rs  filter.rs  lib.rs  plugin.rs  template.rs  tracker.rs
adk-retry-reflect/tests/: unit_tests.rs
adk-runner/src/: context.rs  runner.rs
adk-runner/tests/: runner_config_property_tests.rs
adk-rust-macros/: Cargo.toml
adk-server/: Cargo.toml
adk-server/examples/yaml_agent/: README.md  full_example.yaml  minimal.yaml
adk-server/src/a2a/: remote_agent.rs
adk-server/src/yaml_agent/: interpolator.rs  loader.rs  mod.rs  schema.rs  serializer.rs
adk-server/tests/: yaml_agent_property_tests.rs
adk-tool/: Cargo.toml  README.md
cargo-adk/src/: main.rs  provider.rs
docs/official_docs/: introduction.md  quickstart.md
docs/official_docs/a2a/: getting-started.md
docs/official_docs/agents/: functional-api.md
docs/official_docs/development/: development-guidelines.md
docs/official_docs/models/: gemini-interactions.md
docs/official_docs/tools/: memory-tools.md
examples/a2a_interceptors/: README.md
examples/acp_kiro/src/: delegate.rs  direct.rs  env_and_cancel.rs  session.rs
examples/agent_registry/: README.md
examples/ambient_cron_agent/: Cargo.toml
examples/ambient_cron_agent/src/: main.rs
examples/awp_agent/src/: main.rs
examples/background_runs/: Cargo.toml
examples/background_runs/src/: main.rs
examples/bigquery_toolset/: README.md
examples/coding_agent/: README.md
examples/coding_agent/src/: main.rs  scenarios.rs
examples/coding_goal/: Cargo.toml  README.md
examples/coding_goal/src/: main.rs
examples/coding_graph/: Cargo.toml  README.md
examples/coding_graph/src/: main.rs
examples/context_compaction/: README.md
examples/crate_adoption_feedback/src/: main.rs
examples/cron_scheduling/: Cargo.toml
examples/cron_scheduling/src/: main.rs
examples/deferred_nodes/src/: main.rs
examples/delta_checkpoints/: README.md
examples/desktop_audio/: README.md
examples/functional_workflow/: Cargo.toml
examples/functional_workflow/src/: main.rs
examples/gemini3_builtin_tools/src/: main.rs
examples/gemini_managed_agents/: README.md
examples/gemini_search_bug/src/: main.rs
examples/intra_compaction/: README.md
examples/intra_compaction/src/: main.rs
examples/managed_agents_custom_tools/: README.md
examples/managed_agents_files/: README.md
examples/managed_agents_hello/: README.md
examples/managed_agents_memory/: README.md
examples/managed_agents_multiagent/: README.md
examples/mcp_manager/src/: main.rs
examples/mcp_sampling/: README.md
examples/node_caching/: README.md
examples/node_timeouts/: README.md
examples/openai_background/: README.md
examples/openai_builtin_tools/: README.md
examples/openai_conversations/: README.md
examples/openai_deep_research/: README.md
examples/openai_open_responses/: README.md
examples/openai_ws_minimal/: README.md
examples/output_schema_agent/: Cargo.toml
examples/output_schema_agent/src/: main.rs
examples/plugin_system/: .env.example  Cargo.toml  README.md
examples/plugin_system/src/: main.rs
examples/realtime_voice/assets/: index.html
examples/realtime_voice/src/: server.rs
examples/retry_reflect/: Cargo.toml  README.md
examples/retry_reflect/src/: main.rs
examples/secret_provider/: README.md
examples/server_builder/: README.md
examples/slack_toolset/: README.md
examples/spanner_toolset/: README.md
examples/time_travel/: README.md
examples/time_travel/src/: main.rs
examples/tool_concurrency/: README.md
examples/video_avatar/: README.md
examples/yaml_agent/: README.md
scripts/: bump-version.py  check-doc-versions.py  check-publish-order.py  check-publish-order.sh
