[package]
name = "adk-retry-reflect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Retry & Reflect plugin for ADK-Rust — intercepts tool failures and injects structured reflection prompts"
keywords = ["adk", "agent", "plugin", "retry", "reflection"]
categories = ["development-tools", "asynchronous"]

[dependencies]
adk-core = { workspace = true }
adk-plugin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
proptest = "1.4"
