[package]
name = "ambient-cron-agent-example"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-agent = { path = "../../adk-agent", features = ["ambient"] }
adk-core = { path = "../../adk-core" }
adk-model = { path = "../../adk-model", features = ["gemini"] }
adk-runner = { path = "../../adk-runner" }
adk-session = { path = "../../adk-session" }
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
