[package]
name = "background-runs-example"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-server = { path = "../../adk-server", features = ["background"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
