[package]
name = "coding-graph-example"
version = "0.0.1"
edition = "2024"
publish = false
description = "An 'ultra-review' style coding workflow as an adk-graph: implement -> parallel reviewers -> synthesize -> revise loop"

[workspace]

[dependencies]
adk-core = { path = "../../adk-core" }
adk-agent = { path = "../../adk-agent", features = ["coding"] }
adk-devtools = { path = "../../adk-devtools" }
adk-graph = { path = "../../adk-graph" }
adk-model = { path = "../../adk-model", features = ["gemini", "openai"] }
adk-runner = { path = "../../adk-runner" }
adk-session = { path = "../../adk-session" }
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
