[package]
name = "functional-workflow-example"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-graph = { path = "../../adk-graph", features = ["functional"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
